--- a/app/static/style.css
+++ b/app/static/style.css
@@ -18,7 +18,7 @@ form {
   display: inline-block;
   width: 50px;
   height: 50px;
-  background-color: white;
+  background-color: red;
   border-right: 1px solid black;
   border-bottom: 1px solid black;
 }
