--- a/app/static/style.css
+++ b/app/static/style.css
@@ -18,9 +18,13 @@ form {
   display: inline-block;
   width: 50px;
   height: 50px;
-  background-color: red;
+  background-color: white;
   border-right: 1px solid black;
   border-bottom: 1px solid black;
+  vertical-align: top;
+  font-size: 20px;
+  line-height: 50px;
+  color: black;
 }
 
 .col.hidden{
