--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
   <h1>Minesweeper</h1>
+  <h3>*Left click to dig<br>
+      *Right click to flag
+  </h3>
   <form id = "board-def" style = "display: block" onsubmit="return onSubmit();">
     <p>Board Size: <input type = "number" id = "num_rows"/>  x <input type = "number" id = "num_cols"/></p>
     <p><br>Number of mines: <input type = "number" id = "num_mines"/></p><br>
