--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,17 +1,5 @@
 body {
-  background-color: #f58b57;
   font-family: helvetica;
-  text-align: center;
-}
-
-form {
-
-    margin: 0;
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
 }
 
 .col{
@@ -33,14 +21,79 @@ form {
 }
 
 .col.hidden:hover {
-  background-color: white;
+  background-color: red;
 }
 
 .row{
   font-size: 0px;
 }
 
+//
+
+.topBar {
+    background: #c3c3c3;
+    padding: 10px;
+}
+.header {
+    text-align: center;
+}
+#title {
+    font-size: 1.7em;
+    margin: 0;
+    padding: 0;
+}
+
+#message {
+    text-align: center;
+    font-weight: bold;
+}
+
+.nav-list {
+    padding: 0;
+    text-align: center;
+}
+
+.nav-text {
+    display: inline;
+    width: 30em;
+}
+
+.nav-item {
+    display: inline;
+    width: 10em;
+}
+.nav-item input {
+    width: 50px;
+    margin-bottom: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+.button-style {
+    color: #FFF;
+    background-color: #08F;
+}
 #board {
-  border: 1px solid black;
-  display: inline-block;
+    text-align: center;
+    white-space: nowrap;
+}
+#instructions h2 {
+    margin-left: 40px;
+}
+.cell {
+    width: 1.6em;
+    height: 1.6em;
+    border: 1px solid black;
+    margin: 0;
+    padding: 0;
+    font-size: 1.5em;
+    text-align: center;
+    vertical-align: bottom;
+    background: #666;
+}
+.cell:hover {
+    background: #CCC;
+    border-color: #333;
+}
+.cell:active {
+    background: #AAA;
 }
