Made it so the board appaears on load

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,7 +16,7 @@
       <ul class="nav-list">
         <li class="nav-text">
           <label for="userIdlabel">UserID: </label>
-          <input type="text" id="userID" placeholder="Input your user ID" required>
+          <input type="text" id="userID" placeholder="Input ID to get a score" required>
         </li>
         <li class="nav-item">
           <label for="rowslabel">Rows: </label>
@@ -50,6 +50,6 @@
           <li>If all non-mines are clicked, you win!</li>
       </ul>
   </div>
-  <script src = "../static/main.js"></script>
+  <script src = "../static/main.js" defer></script>
 </body>
 </html>
