--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,11 +20,11 @@
         </li>
         <li class="nav-item">
           <label for="rowslabel">Rows: </label>
-          <input type="number" id="rows" min="2" max="30" value="10">
+          <input type="number" id="rows" min="2" value="10">
         </li>
         <li class="nav-item">
           <label for="colslabel">Cols: </label>
-          <input type="number" id="cols" min="2" max="30" value="10">
+          <input type="number" id="cols" min="2" value="10">
         </li>
         <li class="nav-item">
           <label for="mineslabel">Mines: </label>
